# qtppy

./: .gitignore  Flask_Server.py  README.md  config.py  manage.py  pyproject.toml  requirements.txt  setting.py
instance/: qtppy.sqlite
qtpp/: __init__.py  auth.py  case.py  db.py  email.py  schema.sql  setting.py
qtpp/libs/framework/: asserts.py  constant.py  exts.py  https.py  libs.py  operate_db.py  responseResult.py  sysfunc.py
qtpp/models/: case.py  model.py  post.py  project.py  role.py  user.py  var.py
qtpp/static/css/: style.css
qtpp/templates/auth/: login.html  register.html
qtpp/templates/case/: create.html  index.html  update.html
qtpp/templates/common/: base.html
qtpp/views/: auth.py  case.py  project.py  runs.py  var.py
tests/: conftest.py  test_project.py  testcase.py
