[tool.poetry]
name = "qtppy"
version = "1.0"
description = "Httptesting HTTP(s) interface testing framework."
license = "Apache-2.0"
readme = "README.md"
authors = ["天枢 <lengyaohui@163.com>"]

homepage = "https://github.com/HttpTesting/pyhttp"
repository = "https://github.com/HttpTesting/pyhttp"


keywords = ["http", "api", "test", "requests"]
classifiers  =  [ 
    "Environment :: Console",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
]

include = ["LICENSE", "httptesting/templates/*", "httptesting/config/*", "httptesting/case/*"]

[tool.poetry.dependencies]
Python = "^3.5"
Flask-SQLAlchemy = "^0.0.8"
SQLAlchemy = "1.3.16"
Flask = "1.1.2"
Flask-Migrate = "2.5.3"
Flask-Script = "2.0.6"


[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
am = "httptesting.main:run_min"
amt = "httptesting.main:run_min"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"